--- a/mix-demo-client-azstaticwebapps/package.json
+++ b/mix-demo-client-azstaticwebapps/package.json
@@ -33,7 +33,7 @@
     "bootstrap": "^5.1.0",
     "cytoscape": "^3.19.1",
     "cytoscape-dagre": "^2.3.2",
-    "gatsby": "^2.32.13",
+    "gatsby": "^3.13.0",
     "gatsby-plugin-create-client-paths": "^2.10.0",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-mdx": "^2.13.0",
@@ -42,6 +42,7 @@
     "query-string": "^7.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-typeahead": "^5.2.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-json-view": "^1.21.3",
