--- a/mix-demo-client-azstaticwebapps/package.json
+++ b/mix-demo-client-azstaticwebapps/package.json
@@ -44,6 +44,7 @@
     "react-bootstrap": "^1.6.1",
     "react-datepicker": "^4.2.1",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "react-json-view": "^1.21.3",
     "react-safe-html": "^0.6.1"
   }
